[gd_scene load_steps=8 format=3 uid="uid://83m7u1vywefa"]

[ext_resource type="Script" path="res://Scripts/Card/cardUI.gd" id="1_sw28u"]
[ext_resource type="Texture2D" uid="uid://cawb2ljswlcit" path="res://Assets/Basic Card Front.png" id="2_4tp6w"]
[ext_resource type="FontFile" uid="uid://duiai00hp2f33" path="res://Assets/Jersey10-Regular.ttf" id="3_aou5n"]

[sub_resource type="Animation" id="Animation_y5aoo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bdj7m"]
resource_name = "playCard"
length = 1.00005
step = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_activateCard"
}, {
"args": [],
"method": &"_discardCard"
}, {
"args": [],
"method": &"_poolCard"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cdq1e"]
_data = {
"RESET": SubResource("Animation_y5aoo"),
"playCard": SubResource("Animation_bdj7m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r805y"]
size = Vector2(108, 149)

[node name="Card" type="Node2D"]
script = ExtResource("1_sw28u")

[node name="CardGraphic" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="CardGraphic"]
texture_filter = 1
scale = Vector2(3, 2.8)
texture = ExtResource("2_4tp6w")

[node name="Icon" type="Sprite2D" parent="CardGraphic"]
texture_filter = 1

[node name="Textbox" type="Control" parent="CardGraphic"]
layout_mode = 3
anchors_preset = 0
offset_left = -51.0
offset_top = -73.0
offset_right = 24.0
offset_bottom = -53.0

[node name="Text" type="Label" parent="CardGraphic/Textbox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aou5n")
theme_override_font_sizes/font_size = 14
text = "HI"
horizontal_alignment = 1
uppercase = true

[node name="Combo" type="Label" parent="CardGraphic/Textbox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_right = 30.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_aou5n")
theme_override_font_sizes/font_size = 20
text = "HI"
horizontal_alignment = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cdq1e")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_r805y")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
